--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
   </head>
   <body>
-    Bu benim ilk html sayfam Yeni satır
+    Bu benim ilk html sayfam Yeni satır Lorem ipsum dolor sit amet consectetur
+    adipisicing elit. Dolorum, alias. Velit, minus aperiam nulla non architecto
+    tempora, ratione rerum cumque, recusandae quos ullam! Corrupti aspernatur
+    itaque suscipit veritatis, eos ipsam. Hakkımızda hayırlısı
   </body>
 </html>
